--- a/GrSU.ProcessExplorer.Core/GrSU.ProcessExplorer.Core.csproj
+++ b/GrSU.ProcessExplorer.Core/GrSU.ProcessExplorer.Core.csproj
@@ -52,6 +52,8 @@
     <Compile Include="Native\Kernel32\SnapshotFlags.cs" />
     <Compile Include="ProcessManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WMI\ProcessEventManager.cs" />
+    <Compile Include="WMI\ProcessChangeStateEventArgs.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GrSU.ProcessExplorer\GrSU.ProcessExplorer.csproj">
