--- a/GrSU.ProcessExplorer.Clients.WPF/GrSU.ProcessExplorer.Clients.WPF.csproj
+++ b/GrSU.ProcessExplorer.Clients.WPF/GrSU.ProcessExplorer.Clients.WPF.csproj
@@ -85,7 +85,6 @@
     </ApplicationDefinition>
     <Compile Include="Converters\LastColumnWidthConverter.cs" />
     <Compile Include="DialogManager.cs" />
-    <Compile Include="Helpers\DispatcherHelpers.cs" />
     <Compile Include="Mapping\MappingExtensions.cs" />
     <Compile Include="Messages\CompleteWorkMessage.cs" />
     <Compile Include="Messages\LoadProcessListMessage.cs" />
@@ -100,7 +99,7 @@
     <Compile Include="ViewModel\ActivityInfoViewModel.cs" />
     <Compile Include="ViewModel\Common\BaseViewModel.cs" />
     <Compile Include="ViewModel\ProcessListViewModel.cs" />
-    <Compile Include="ViewModel\ProcessStartDialogViewModel.cs" />
+    <Compile Include="ViewModel\Dialogs\ProcessStartDialogViewModel.cs" />
     <Compile Include="ViewModel\ShellViewModel.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
     <Compile Include="App.xaml.cs">
@@ -110,7 +109,7 @@
     <Compile Include="View\ActivityInfoView.xaml.cs">
       <DependentUpon>ActivityInfoView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Dialogs\ProcessStartDialog.xaml.cs">
+    <Compile Include="View\Dialogs\ProcessStartDialog.xaml.cs">
       <DependentUpon>ProcessStartDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\ProcessListView.xaml.cs">
@@ -164,7 +163,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Dialogs\ProcessStartDialog.xaml">
+    <Page Include="View\Dialogs\ProcessStartDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
